--- a/hack/golangci.yaml
+++ b/hack/golangci.yaml
@@ -32,7 +32,7 @@ linters-settings: # please keep this alphabetized
   custom:
     logcheck:
       # Installed there by hack/verify-golangci-lint.sh.
-      path: _output/local/bin/logcheck.so
+      path: ../_output/local/bin/logcheck.so
       description: structured logging checker
       original-url: k8s.io/klog/hack/tools
   gocritic:
